new commit from pc

--- a/test_jup.ipynb
+++ b/test_jup.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "<h1><center>For testing with new changes to repo</center><h1>\n",
-    "<h3><center>not to be used for actual testing of data</center><h3>"
+    "<h3><center>not to be used for actual testing of data</center><h3>\n",
+    "<hr>"
    ]
   },
   {
