added py file to test full runs

--- a/working_file.ipynb
+++ b/working_file.ipynb
@@ -231,9 +231,21 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "ename": "NameError",
+                    "evalue": "name 'graph_vars' is not defined",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+                        "\u001b[1;32mc:\\Users\\toyo4\\Documents\\jupyter\\working_file.ipynb Cell 15'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/toyo4/Documents/jupyter/working_file.ipynb#ch0000014?line=0'>1</a>\u001b[0m ax \u001b[39m=\u001b[39m graph_vars\u001b[39m.\u001b[39mplot\u001b[39m.\u001b[39mbar()\n",
+                        "\u001b[1;31mNameError\u001b[0m: name 'graph_vars' is not defined"
+                    ]
+                }
+            ],
             "source": [
                 "ax = graph_vars.plot.bar() # ylim=[4600,5200], title=\"Chart of Countries' Average Profit over the Years\""
             ]
@@ -257,7 +269,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.9.12"
+            "version": "3.9.0"
         },
         "orig_nbformat": 4
     },
